--- a/.github/workflows/manual-release-package.yml
+++ b/.github/workflows/manual-release-package.yml
@@ -7,9 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 18.18.1
+      - run: npm install
       - run: npm run build
 
   publish-gpr:
@@ -20,12 +21,12 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 18.18.1
-          registry-url: https://npm.pkg.github.com/
+          registry-url: 'https://registry.npmjs.org'
           scope: '@storkyle'
+          token: ${{ secrets.NPM_TOKEN }}
+      - run: npm install
       - run: npm run build
       - run: npm run pub
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
